# ds-ai-intern-template

./: README.md  pyproject.toml
capstone/: project.md
weeks/WEEK1/: README_W1.md
weeks/WEEK2/: README_W2.md
weeks/week2/: README.md
weeks/week3/: README.md
weeks/week4/: README.md
weeks/week5/: README  README.md
weeks/week6/: README  README.md
weeks/week7/: README.md
weeks/week8/: README.md
